// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip interactivity hides the bubble when clicking outside of it 1`] = `
.c4 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  border-radius: 4px;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c3 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

.c0 {
  line-height: 1;
  position: relative;
  width: 1rem;
  height: 1.3rem;
}

.c1 {
  position: absolute;
}

@media (max-width:575px) {
  .c2 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c2 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c2 {
    max-width: 25vw;
  }
}

<Tooltip
  direction="auto"
>
  <Tooltip__StyledTooltip>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "line-height: 1;",
              "position: relative;",
              "width: 1rem;",
              "height: 1.3rem;",
            ],
          },
          "displayName": "Tooltip__StyledTooltip",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={[Function]}
    >
      <div
        className="c0"
      >
        <Tooltip__TooltipContainer
          data-testid="tooltipContainer"
        >
          <StyledComponent
            data-testid="tooltipContainer"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "position: absolute;",
                  ],
                },
                "displayName": "Tooltip__TooltipContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
              data-testid="tooltipContainer"
            >
              <Bubble
                direction="right"
                id="standalone-tooltip-mc41_tooltip"
                open={true}
                width={
                  Object {
                    "width": "calc(1008px - 1rem - 0.5rem)",
                  }
                }
              >
                <Styled(Component)
                  aria-hidden="false"
                  aria-live="assertive"
                  bubbleDimensions={
                    Object {
                      "bubbleOffset": "7px",
                      "bubbleTriangleHeight": "10px",
                      "bubbleTrianglePosition": "12px",
                      "bubbleTriangleWidth": "7px",
                      "bubbleTriggerSize": "24px",
                    }
                  }
                  direction="right"
                  horizontal={3}
                  id="standalone-tooltip-mc41_tooltip"
                  open={true}
                  role="tooltip"
                  vertical={2}
                >
                  <StyledComponent
                    aria-hidden="false"
                    aria-live="assertive"
                    bubbleDimensions={
                      Object {
                        "bubbleOffset": "7px",
                        "bubbleTriangleHeight": "10px",
                        "bubbleTrianglePosition": "12px",
                        "bubbleTriangleWidth": "7px",
                        "bubbleTriggerSize": "24px",
                      }
                    }
                    direction="right"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [
                          [Function],
                        ],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bdVaJa",
                          "isStatic": false,
                          "lastClassName": "iXNTBS",
                          "rules": Array [
                            "border-radius: 4px;",
                            [Function],
                          ],
                        },
                        "displayName": "Styled(Component)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bdVaJa",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    horizontal={3}
                    id="standalone-tooltip-mc41_tooltip"
                    open={true}
                    role="tooltip"
                    vertical={2}
                  >
                    <Component
                      aria-hidden="false"
                      aria-live="assertive"
                      bubbleDimensions={
                        Object {
                          "bubbleOffset": "7px",
                          "bubbleTriangleHeight": "10px",
                          "bubbleTrianglePosition": "12px",
                          "bubbleTriangleWidth": "7px",
                          "bubbleTriggerSize": "24px",
                        }
                      }
                      className="c2"
                      data-testid="bubble"
                      direction="right"
                      horizontal={3}
                      id="standalone-tooltip-mc41_tooltip"
                      open={true}
                      role="tooltip"
                      vertical={2}
                    >
                      <Box
                        aria-hidden="false"
                        aria-live="assertive"
                        className="c2"
                        data-testid="bubble"
                        horizontal={3}
                        id="standalone-tooltip-mc41_tooltip"
                        inline={false}
                        role="tooltip"
                        tag="div"
                        vertical={2}
                      >
                        <div
                          aria-hidden="false"
                          aria-live="assertive"
                          className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c2"
                          data-testid="bubble"
                          id="standalone-tooltip-mc41_tooltip"
                          role="tooltip"
                        >
                          <Bubble__InnerBubbleStyle
                            bubbleWidth={
                              Object {
                                "width": "calc(1008px - 1rem - 0.5rem)",
                              }
                            }
                          >
                            <StyledComponent
                              bubbleWidth={
                                Object {
                                  "width": "calc(1008px - 1rem - 0.5rem)",
                                }
                              }
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Bubble__InnerBubbleStyle",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                              >
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="small"
                                >
                                  <span
                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
                                  >
                                    Tooltip text
                                  </span>
                                </Text>
                              </div>
                            </StyledComponent>
                          </Bubble__InnerBubbleStyle>
                        </div>
                      </Box>
                    </Component>
                  </StyledComponent>
                </Styled(Component)>
              </Bubble>
              <StandaloneIcon
                a11yText="Reveal additional information."
                aria-controls="standalone-tooltip-mc41_tooltip"
                aria-expanded="true"
                aria-haspopup="true"
                id="standalone-tooltip-mc41_trigger"
                onClick={[Function]}
                size={24}
                symbol="questionMarkCircle"
              >
                <Clickable
                  aria-controls="standalone-tooltip-mc41_tooltip"
                  aria-expanded="true"
                  aria-haspopup="true"
                  id="standalone-tooltip-mc41_trigger"
                  onClick={[Function]}
                  style={
                    Object {
                      "margin": "-4px",
                      "padding": "4px",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-controls="standalone-tooltip-mc41_tooltip"
                    aria-expanded="true"
                    aria-haspopup="true"
                    className="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                    id="standalone-tooltip-mc41_trigger"
                    onClick={[Function]}
                    style={
                      Object {
                        "margin": "-4px",
                        "padding": "4px",
                      }
                    }
                    type="button"
                  >
                    <Icon
                      size={24}
                      symbol="questionMarkCircle"
                    >
                      <i
                        className="TDS_Icon-modules__iconQuestionMarkCircle___2km-5 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__size24___37pQ7"
                      >
                        <A11yContent>
                          <A11yContent__StyledA11yContent>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                    "isStatic": true,
                                    "lastClassName": "c4",
                                    "rules": Array [
                                      "position: absolute;",
                                      "height: 1px;",
                                      "width: 1px;",
                                      "overflow: hidden;",
                                      "clip: rect(1px, 1px, 1px, 1px);",
                                    ],
                                  },
                                  "displayName": "A11yContent__StyledA11yContent",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                  "target": "span",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <span
                                className="c4"
                              >
                                Reveal additional information.
                              </span>
                            </StyledComponent>
                          </A11yContent__StyledA11yContent>
                        </A11yContent>
                      </i>
                    </Icon>
                  </button>
                </Clickable>
              </StandaloneIcon>
            </div>
          </StyledComponent>
        </Tooltip__TooltipContainer>
      </div>
    </StyledComponent>
  </Tooltip__StyledTooltip>
</Tooltip>
`;

exports[`Tooltip interactivity hides the bubble when clicking outside of it 2`] = `
.c4 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  border-radius: 4px;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c3 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

.c0 {
  line-height: 1;
  position: relative;
  width: 1rem;
  height: 1.3rem;
}

.c1 {
  position: absolute;
}

@media (max-width:575px) {
  .c2 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c2 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c2 {
    max-width: 25vw;
  }
}

<Tooltip
  direction="auto"
>
  <Tooltip__StyledTooltip>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "line-height: 1;",
              "position: relative;",
              "width: 1rem;",
              "height: 1.3rem;",
            ],
          },
          "displayName": "Tooltip__StyledTooltip",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={[Function]}
    >
      <div
        className="c0"
      >
        <Tooltip__TooltipContainer
          data-testid="tooltipContainer"
        >
          <StyledComponent
            data-testid="tooltipContainer"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "position: absolute;",
                  ],
                },
                "displayName": "Tooltip__TooltipContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
              data-testid="tooltipContainer"
            >
              <Bubble
                direction="right"
                id="standalone-tooltip-mc41_tooltip"
                open={true}
                width={
                  Object {
                    "width": "calc(1008px - 1rem - 0.5rem)",
                  }
                }
              >
                <Styled(Component)
                  aria-hidden="false"
                  aria-live="assertive"
                  bubbleDimensions={
                    Object {
                      "bubbleOffset": "7px",
                      "bubbleTriangleHeight": "10px",
                      "bubbleTrianglePosition": "12px",
                      "bubbleTriangleWidth": "7px",
                      "bubbleTriggerSize": "24px",
                    }
                  }
                  direction="right"
                  horizontal={3}
                  id="standalone-tooltip-mc41_tooltip"
                  open={true}
                  role="tooltip"
                  vertical={2}
                >
                  <StyledComponent
                    aria-hidden="false"
                    aria-live="assertive"
                    bubbleDimensions={
                      Object {
                        "bubbleOffset": "7px",
                        "bubbleTriangleHeight": "10px",
                        "bubbleTrianglePosition": "12px",
                        "bubbleTriangleWidth": "7px",
                        "bubbleTriggerSize": "24px",
                      }
                    }
                    direction="right"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [
                          [Function],
                        ],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bdVaJa",
                          "isStatic": false,
                          "lastClassName": "iXNTBS",
                          "rules": Array [
                            "border-radius: 4px;",
                            [Function],
                          ],
                        },
                        "displayName": "Styled(Component)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bdVaJa",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    horizontal={3}
                    id="standalone-tooltip-mc41_tooltip"
                    open={true}
                    role="tooltip"
                    vertical={2}
                  >
                    <Component
                      aria-hidden="false"
                      aria-live="assertive"
                      bubbleDimensions={
                        Object {
                          "bubbleOffset": "7px",
                          "bubbleTriangleHeight": "10px",
                          "bubbleTrianglePosition": "12px",
                          "bubbleTriangleWidth": "7px",
                          "bubbleTriggerSize": "24px",
                        }
                      }
                      className="c2"
                      data-testid="bubble"
                      direction="right"
                      horizontal={3}
                      id="standalone-tooltip-mc41_tooltip"
                      open={true}
                      role="tooltip"
                      vertical={2}
                    >
                      <Box
                        aria-hidden="false"
                        aria-live="assertive"
                        className="c2"
                        data-testid="bubble"
                        horizontal={3}
                        id="standalone-tooltip-mc41_tooltip"
                        inline={false}
                        role="tooltip"
                        tag="div"
                        vertical={2}
                      >
                        <div
                          aria-hidden="false"
                          aria-live="assertive"
                          className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c2"
                          data-testid="bubble"
                          id="standalone-tooltip-mc41_tooltip"
                          role="tooltip"
                        >
                          <Bubble__InnerBubbleStyle
                            bubbleWidth={
                              Object {
                                "width": "calc(1008px - 1rem - 0.5rem)",
                              }
                            }
                          >
                            <StyledComponent
                              bubbleWidth={
                                Object {
                                  "width": "calc(1008px - 1rem - 0.5rem)",
                                }
                              }
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Bubble__InnerBubbleStyle",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                              >
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="small"
                                >
                                  <span
                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
                                  >
                                    Tooltip text
                                  </span>
                                </Text>
                              </div>
                            </StyledComponent>
                          </Bubble__InnerBubbleStyle>
                        </div>
                      </Box>
                    </Component>
                  </StyledComponent>
                </Styled(Component)>
              </Bubble>
              <StandaloneIcon
                a11yText="Reveal additional information."
                aria-controls="standalone-tooltip-mc41_tooltip"
                aria-expanded="true"
                aria-haspopup="true"
                id="standalone-tooltip-mc41_trigger"
                onClick={[Function]}
                size={24}
                symbol="questionMarkCircle"
              >
                <Clickable
                  aria-controls="standalone-tooltip-mc41_tooltip"
                  aria-expanded="true"
                  aria-haspopup="true"
                  id="standalone-tooltip-mc41_trigger"
                  onClick={[Function]}
                  style={
                    Object {
                      "margin": "-4px",
                      "padding": "4px",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-controls="standalone-tooltip-mc41_tooltip"
                    aria-expanded="true"
                    aria-haspopup="true"
                    className="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                    id="standalone-tooltip-mc41_trigger"
                    onClick={[Function]}
                    style={
                      Object {
                        "margin": "-4px",
                        "padding": "4px",
                      }
                    }
                    type="button"
                  >
                    <Icon
                      size={24}
                      symbol="questionMarkCircle"
                    >
                      <i
                        className="TDS_Icon-modules__iconQuestionMarkCircle___2km-5 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__size24___37pQ7"
                      >
                        <A11yContent>
                          <A11yContent__StyledA11yContent>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                    "isStatic": true,
                                    "lastClassName": "c4",
                                    "rules": Array [
                                      "position: absolute;",
                                      "height: 1px;",
                                      "width: 1px;",
                                      "overflow: hidden;",
                                      "clip: rect(1px, 1px, 1px, 1px);",
                                    ],
                                  },
                                  "displayName": "A11yContent__StyledA11yContent",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                  "target": "span",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <span
                                className="c4"
                              >
                                Reveal additional information.
                              </span>
                            </StyledComponent>
                          </A11yContent__StyledA11yContent>
                        </A11yContent>
                      </i>
                    </Icon>
                  </button>
                </Clickable>
              </StandaloneIcon>
            </div>
          </StyledComponent>
        </Tooltip__TooltipContainer>
      </div>
    </StyledComponent>
  </Tooltip__StyledTooltip>
</Tooltip>
`;

exports[`Tooltip interactivity shows and hides the bubble 1`] = `
.c0 {
  border-radius: 4px;
  display: none;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c1 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

@media (max-width:575px) {
  .c0 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c0 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 25vw;
  }
}

<div
  aria-hidden="true"
  aria-live="assertive"
  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c0"
  data-testid="bubble"
  id="standalone-tooltip-mc41_tooltip"
  role="tooltip"
>
  <Bubble__InnerBubbleStyle
    bubbleWidth={
      Object {
        "width": "calc(1008px - 1rem - 0.5rem)",
      }
    }
  >
    <StyledComponent
      bubbleWidth={
        Object {
          "width": "calc(1008px - 1rem - 0.5rem)",
        }
      }
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
            "isStatic": false,
            "lastClassName": "c1",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Bubble__InnerBubbleStyle",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c1"
      >
        <Text
          block={false}
          bold={false}
          invert={false}
          size="small"
        >
          <span
            className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
          >
            Tooltip text
          </span>
        </Text>
      </div>
    </StyledComponent>
  </Bubble__InnerBubbleStyle>
</div>
`;

exports[`Tooltip interactivity shows and hides the bubble 2`] = `
.c0 {
  border-radius: 4px;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c1 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

@media (max-width:575px) {
  .c0 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c0 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 25vw;
  }
}

<div
  aria-hidden="false"
  aria-live="assertive"
  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c0"
  data-testid="bubble"
  id="standalone-tooltip-mc41_tooltip"
  role="tooltip"
>
  <Bubble__InnerBubbleStyle
    bubbleWidth={
      Object {
        "width": "calc(1008px - 1rem - 0.5rem)",
      }
    }
  >
    <StyledComponent
      bubbleWidth={
        Object {
          "width": "calc(1008px - 1rem - 0.5rem)",
        }
      }
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
            "isStatic": false,
            "lastClassName": "c1",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Bubble__InnerBubbleStyle",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c1"
      >
        <Text
          block={false}
          bold={false}
          invert={false}
          size="small"
        >
          <span
            className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
          >
            Tooltip text
          </span>
        </Text>
      </div>
    </StyledComponent>
  </Bubble__InnerBubbleStyle>
</div>
`;

exports[`Tooltip interactivity shows and hides the bubble 3`] = `
.c0 {
  border-radius: 4px;
  display: none;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c1 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

@media (max-width:575px) {
  .c0 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c0 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 25vw;
  }
}

<div
  aria-hidden="true"
  aria-live="assertive"
  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c0"
  data-testid="bubble"
  id="standalone-tooltip-mc41_tooltip"
  role="tooltip"
>
  <Bubble__InnerBubbleStyle
    bubbleWidth={
      Object {
        "width": "calc(1008px - 1rem - 0.5rem)",
      }
    }
  >
    <StyledComponent
      bubbleWidth={
        Object {
          "width": "calc(1008px - 1rem - 0.5rem)",
        }
      }
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
            "isStatic": false,
            "lastClassName": "c1",
            "rules": Array [
              [Function],
            ],
          },
          "displayName": "Bubble__InnerBubbleStyle",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c1"
      >
        <Text
          block={false}
          bold={false}
          invert={false}
          size="small"
        >
          <span
            className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
          >
            Tooltip text
          </span>
        </Text>
      </div>
    </StyledComponent>
  </Bubble__InnerBubbleStyle>
</div>
`;

exports[`Tooltip renders 1`] = `
.c4 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c2 {
  border-radius: 4px;
  display: none;
  position: absolute;
  bottom: calc(100% + 10px);
  background-color: #fff;
  box-shadow: 0 0 2px 0 #2a2c2e,0 3px 2px 0 rgba(84,89,95,0.25);
  left: calc(100% - 24px - 7px);
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  bottom: -7px;
  border-width: 7px;
  border-style: solid;
  border-color: transparent #fff #fff transparent;
  background-color: #fff;
  box-shadow: 2px 2px 3px 0 rgba(42,42,44,0.4);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  left: 12px;
}

.c3 {
  width: calc(1008px - 1rem - 0.5rem);
  max-width: 100%;
}

.c0 {
  line-height: 1;
  position: relative;
  width: 1rem;
  height: 1.3rem;
}

.c1 {
  position: absolute;
}

@media (max-width:575px) {
  .c2 {
    max-width: 80vw;
  }
}

@media (min-width:576px) {
  .c2 {
    max-width: 50vw;
  }
}

@media (min-width:768px) {
  .c2 {
    max-width: 25vw;
  }
}

<Tooltip
  direction="auto"
>
  <Tooltip__StyledTooltip>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "line-height: 1;",
              "position: relative;",
              "width: 1rem;",
              "height: 1.3rem;",
            ],
          },
          "displayName": "Tooltip__StyledTooltip",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Tooltip__StyledTooltip-sc-2tc47i-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={[Function]}
    >
      <div
        className="c0"
      >
        <Tooltip__TooltipContainer
          data-testid="tooltipContainer"
        >
          <StyledComponent
            data-testid="tooltipContainer"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "position: absolute;",
                  ],
                },
                "displayName": "Tooltip__TooltipContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Tooltip__TooltipContainer-sc-2tc47i-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
              data-testid="tooltipContainer"
            >
              <Bubble
                direction="right"
                id="standalone-tooltip-mc41_tooltip"
                open={false}
                width={
                  Object {
                    "width": "calc(1008px - 1rem - 0.5rem)",
                  }
                }
              >
                <Styled(Component)
                  aria-hidden="true"
                  aria-live="assertive"
                  bubbleDimensions={
                    Object {
                      "bubbleOffset": "7px",
                      "bubbleTriangleHeight": "10px",
                      "bubbleTrianglePosition": "12px",
                      "bubbleTriangleWidth": "7px",
                      "bubbleTriggerSize": "24px",
                    }
                  }
                  direction="right"
                  horizontal={3}
                  id="standalone-tooltip-mc41_tooltip"
                  open={false}
                  role="tooltip"
                  vertical={2}
                >
                  <StyledComponent
                    aria-hidden="true"
                    aria-live="assertive"
                    bubbleDimensions={
                      Object {
                        "bubbleOffset": "7px",
                        "bubbleTriangleHeight": "10px",
                        "bubbleTrianglePosition": "12px",
                        "bubbleTriangleWidth": "7px",
                        "bubbleTriggerSize": "24px",
                      }
                    }
                    direction="right"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [
                          [Function],
                        ],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bdVaJa",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "border-radius: 4px;",
                            [Function],
                          ],
                        },
                        "displayName": "Styled(Component)",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bdVaJa",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    horizontal={3}
                    id="standalone-tooltip-mc41_tooltip"
                    open={false}
                    role="tooltip"
                    vertical={2}
                  >
                    <Component
                      aria-hidden="true"
                      aria-live="assertive"
                      bubbleDimensions={
                        Object {
                          "bubbleOffset": "7px",
                          "bubbleTriangleHeight": "10px",
                          "bubbleTrianglePosition": "12px",
                          "bubbleTriangleWidth": "7px",
                          "bubbleTriggerSize": "24px",
                        }
                      }
                      className="c2"
                      data-testid="bubble"
                      direction="right"
                      horizontal={3}
                      id="standalone-tooltip-mc41_tooltip"
                      open={false}
                      role="tooltip"
                      vertical={2}
                    >
                      <Box
                        aria-hidden="true"
                        aria-live="assertive"
                        className="c2"
                        data-testid="bubble"
                        horizontal={3}
                        id="standalone-tooltip-mc41_tooltip"
                        inline={false}
                        role="tooltip"
                        tag="div"
                        vertical={2}
                      >
                        <div
                          aria-hidden="true"
                          aria-live="assertive"
                          className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T c2"
                          data-testid="bubble"
                          id="standalone-tooltip-mc41_tooltip"
                          role="tooltip"
                        >
                          <Bubble__InnerBubbleStyle
                            bubbleWidth={
                              Object {
                                "width": "calc(1008px - 1rem - 0.5rem)",
                              }
                            }
                          >
                            <StyledComponent
                              bubbleWidth={
                                Object {
                                  "width": "calc(1008px - 1rem - 0.5rem)",
                                }
                              }
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "Bubble__InnerBubbleStyle",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Bubble__InnerBubbleStyle-sc-15jatun-0",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                              >
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="small"
                                >
                                  <span
                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
                                  >
                                    Tooltip text
                                  </span>
                                </Text>
                              </div>
                            </StyledComponent>
                          </Bubble__InnerBubbleStyle>
                        </div>
                      </Box>
                    </Component>
                  </StyledComponent>
                </Styled(Component)>
              </Bubble>
              <StandaloneIcon
                a11yText="Reveal additional information."
                aria-controls="standalone-tooltip-mc41_tooltip"
                aria-expanded="false"
                aria-haspopup="true"
                id="standalone-tooltip-mc41_trigger"
                onClick={[Function]}
                size={24}
                symbol="questionMarkCircle"
              >
                <Clickable
                  aria-controls="standalone-tooltip-mc41_tooltip"
                  aria-expanded="false"
                  aria-haspopup="true"
                  id="standalone-tooltip-mc41_trigger"
                  onClick={[Function]}
                  style={
                    Object {
                      "margin": "-4px",
                      "padding": "4px",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-controls="standalone-tooltip-mc41_tooltip"
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="TDS_Clickable-modules__clickable___Wf5Qr TDS_Spacing-modules__noSpacing___XPYDG TDS_Borders-modules__none___1fCjZ TDS_Forms-modules__font___g7OGX TDS_Typography-modules__color___2CNH8"
                    id="standalone-tooltip-mc41_trigger"
                    onClick={[Function]}
                    style={
                      Object {
                        "margin": "-4px",
                        "padding": "4px",
                      }
                    }
                    type="button"
                  >
                    <Icon
                      size={24}
                      symbol="questionMarkCircle"
                    >
                      <i
                        className="TDS_Icon-modules__iconQuestionMarkCircle___2km-5 TDS_Icon-modules__icon___13xYd TDS_Icon-modules__size24___37pQ7"
                      >
                        <A11yContent>
                          <A11yContent__StyledA11yContent>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                    "isStatic": true,
                                    "lastClassName": "c4",
                                    "rules": Array [
                                      "position: absolute;",
                                      "height: 1px;",
                                      "width: 1px;",
                                      "overflow: hidden;",
                                      "clip: rect(1px, 1px, 1px, 1px);",
                                    ],
                                  },
                                  "displayName": "A11yContent__StyledA11yContent",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "A11yContent__StyledA11yContent-sc-15wexwk-0",
                                  "target": "span",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <span
                                className="c4"
                              >
                                Reveal additional information.
                              </span>
                            </StyledComponent>
                          </A11yContent__StyledA11yContent>
                        </A11yContent>
                      </i>
                    </Icon>
                  </button>
                </Clickable>
              </StandaloneIcon>
            </div>
          </StyledComponent>
        </Tooltip__TooltipContainer>
      </div>
    </StyledComponent>
  </Tooltip__StyledTooltip>
</Tooltip>
`;
